replaced hand-made stack with normal list